Closed Bug 235171 Opened 22 years ago Closed 22 years ago

[FIX]TEXTAREA narrow than set by COLS= (newlines don't end unquoted attributes)

Categories

(Core :: DOM: HTML Parser, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.7beta

People

(Reporter: noririty, Assigned: bzbarsky)

References

()

Details

(Keywords: qawanted, regression)

Attachments

(1 file)

- Occurs On 20040219 - Doesn't Occur On 20040221
oops, it was opposite. - Doesn't Occur On 20040219 - Occurs On 20040221
Keywords: qawanted
What are the times to go with those dates? What about 2004-02-20-XX?
This is a parser issue (look in DOM inspector and notice that the cols attr isn't even set).
Assignee: nobody → parser
Component: Layout: Form Controls → HTML: Parser
Attached patch FixSplinter Review
The idea here is to only allow newlines inside quoted attrs. Other attrs should be terminated by newlines.
Attachment #141974 - Flags: superreview?(jst)
Attachment #141974 - Flags: review?(choess)
This is a regression from bug 137315
Assignee: parser → bzbarsky
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Summary: TEXTAREA narrow than set by COLS= → [FIX]TEXTAREA narrow than set by COLS=
Target Milestone: --- → mozilla1.7beta
Comment on attachment 141974 [details] [diff] [review] Fix + else if(aAllowNewlines && ch == kCR) { ... >+ else if(aAllowNewlines && ch == kNewLine) { Would it not generally be faster to check ch == k... before checking aAllowNewlines? sr=jst
Attachment #141974 - Flags: superreview?(jst) → superreview+
Hmm.. probably. I will change that before checking in.
Summary: [FIX]TEXTAREA narrow than set by COLS= → [FIX]TEXTAREA narrow than set by COLS= (newlines don't end unquoted attributes)
*** Bug 235340 has been marked as a duplicate of this bug. ***
Attachment #141974 - Flags: review?(choess) → review+
Checked in, with that change.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 235497 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: