Allow newlines to end unquoted attributes again.  Bug 235171, r=choess, sr=jst